--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 
 button {
   flex: 1;
-  padding: 20px;
+  padding: 20px 10px;
   font-size: 1.5em;
   border: 1px solid #ccc;
   background: #f0f0f0;
